# rejestr-cen-nieruchomosci-wrapper

./: .gitignore  pyproject.toml
.claude/skills/rcn-wfs-guide/: SKILL.md
app/: main.py  models.py
app/core/: cache.py  config.py
app/routers/: metadata.py  stats.py  transactions.py
app/services/: parser_gml.py  rcn_client.py  transform.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts  transactions.ts
frontend/src/components/Filters/: DateRangeInput.tsx  FiltersPanel.css  FiltersPanel.tsx  MarketToggle.tsx  RangeInput.tsx  RoomsSelect.tsx
frontend/src/components/Map/: ColorLegend.tsx  MapView.css  MapView.tsx
frontend/src/components/Stats/: StatsPanel.css  StatsPanel.tsx
frontend/src/hooks/: useTransactions.ts
frontend/src/types/: transaction.ts
frontend/src/utils/: colors.ts  formatters.ts  stats.ts
tests/: conftest.py  test_parser_gml.py  test_stats.py  test_transactions.py  test_transform.py
