[project]
name = "rcn-wrapper"
version = "0.1.0"
description = "FastAPI wrapper for RCN (Rejestr Cen Nieruchomości) WFS service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "lxml>=5.0",
    "pyproj>=3.6",
    "cachetools>=5.3",
    "pydantic-settings>=2.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "httpx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
